[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/theme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/Main.gd" type="Script" id=2]
[ext_resource path="res://Menu/Lixdu-p7Pn1.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_top = 4
extra_spacing_bottom = 4
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 3 )
Label/colors/font_color = Color( 0.87451, 0.34902, 0.34902, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 240.0 ]
}

[node name="Title" type="Label" parent="."]
margin_right = 480.0
margin_bottom = 160.0
theme = SubResource( 2 )
text = "Space
Bumble"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = 17.0
margin_right = 88.0
margin_bottom = 121.0
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 176.0
margin_bottom = 35.0
theme = ExtResource( 1 )
text = "Start"

[node name="Highscores" type="Button" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 176.0
margin_bottom = 64.0
theme = ExtResource( 1 )
text = "Highscores"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 176.0
margin_bottom = 93.0
theme = ExtResource( 1 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Highscores" to="." method="_on_Highscores_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
